--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "editor.formatOnSave": true,
     "cSpell.words": [
+        "clsx",
         "heroicons",
-        "Lusitana"
+        "Lusitana",
+        "sidenav"
     ]
 }
